Check that XOpenDevice() returns valid device_id.

XOpenDevice() is sometimes returning a non-null XDevice* but the
contents are garbage. This shouldn't be happening but for now we can
check if the device_id is correct. If not, we exit early to avoid a
crash from X BadDevice error.

BUG=659261

Review-Url: https://codereview.chromium.org/2471653002
Cr-Commit-Position: refs/heads/master@{#429199}

Former-commit-id: c32a70410b6c23d686dce57bd72080f43a3e5a60